--- a/Projects_ESP32_Code/platformio.ini
+++ b/Projects_ESP32_Code/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = madhephaestus/ESP32Encoder@^0.11.7
+monitor_speed = 115200
